--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "humandesign",
   "private": true,
+  "proxy":"http://localhost:8000",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
