--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2"
   },
   "devDependencies": {
