--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@reduxjs/toolkit": "^1.9.7",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.4",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
