--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
