--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/material": "^5.14.12",
     "@mui/x-date-pickers": "^6.18.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.8.7",
+    "@tanstack/react-query-devtools": "^5.8.7",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
