--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.1.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.16.0",
+    "sweetalert2": "^11.10.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
