--- a/Server/package.json
+++ b/Server/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^6.2.0",
     "uuid": "^9.0.1"
   },
