--- a/Server/package.json
+++ b/Server/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
+    "mongoose": "^8.0.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
